This is my first commit from terminal ^G

--- a/user_identification_study.ipynb
+++ b/user_identification_study.ipynb
@@ -4,11 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Идентификация пользователей по посещенным веб-страницам\n",
+    "# User identification by browser history\n",
     "\n",
-    "Савчук Андрей\n",
-    "Ноябрь, 2020г.\n",
-    "\n",
+    "Savchuk Andrei\n",
     "\n"
    ]
   },
@@ -16,17 +14,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1. Цели и задачи проекта, описание исходных данных"
+    "### 1. Task and dataset."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Тема проекта - способы решения задачи идентификации пользователя по его поведению в сети Интернет. По последовательности из нескольких веб-сайтов, посещенных подряд одним и тем же человеком, требуется идентифицировать этого человека.\n",
+    "The task is to identify users by their browsing history. The source database are lists of web bages with timestamp for every user in the sample.\n",
     "\n",
-    "Исходные данные: ID пользователя, timestamp (метка времени), посещенный веб-сайт.\n",
-    "Есть выборки по 10, 150, и 400 пользователей.\n"
+    "There are samples with 10 and 150 users.\n",
+    "\n"
    ]
   },
   {
@@ -4042,7 +4040,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
